Make images inside cards full-width, and fix landscape/portrait visibility classes

--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -44,6 +44,10 @@ $card-divider-background: smartscale($card-background, 7%) !default;
   ul {
     margin-bottom: 0;
   }
+
+  img {
+    width: 100%;
+  }
 }
 
 @mixin card-divider(
